fixed removeEventListener on primary Click fixed: z-index for popup and prevent :active on primary button

--- a/Extension/src/styles/main.scss
+++ b/Extension/src/styles/main.scss
@@ -4,8 +4,14 @@
   $block-width: 30px;
 
   background-color: $cyan !important;
-  position: relative;
-  border-radius: 3px;
+  position: relative !important;
+  border-radius: 3px !important;
+  z-index: 100 !important;
+
+  &:active{
+    padding-top: 7px !important;
+    padding-bottom: 8px !important;
+  }
 
   .old-content-wrapper {
     margin-right: $block-width;
@@ -36,7 +42,7 @@
   width: 360px;
   height: 200px;
   bottom: 26px;
-  left: 0;
+  right: -30px;
   z-index: 200;
   cursor: default;
   -webkit-animation: fadeInFromNone 0.5s ease-out;
@@ -75,7 +81,7 @@
 
   .triangle-down-wrapper {
     .triangle-down {
-      left: 63px;
+      right: 39px;
       bottom: 3px;
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
@@ -83,8 +89,8 @@
       z-index: 1;
     }
     .triangle-down-border {
+      right: 38px;
       bottom: 1px;
-      left: 62px;
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
       border-top: 8px solid $vk-blue;
